[package]
name = "myos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300  # (300s)

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.9.0"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false