[package]
name = "myos"
version = "0.1.0"
edition = "2021"

# 禁用栈展开，panic时直接退出
[profile.dev]
panic = "abort"

# 禁用栈展开，panic时直接退出
[profile.release]
panic = "abort"

# 创建一个bootable的image
[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300  # (300s)

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies]
# BIOS，用以启动内核
bootloader = { version = "0.9.22", features = ["map_physical_memory"] } 

# 处理易失操作
volatile = "0.2.6"

# 运行时初始化静态变量，而不是用Box::leak
lazy_static = {version = "1.0", features = ["spin_no_std"]}

# 自旋锁
spin = "0.9.0"

# x86-64的指令，结构等
x86_64 = "0.14.2"

# 串行端口
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false